# Nidan-v2

./: .gitignore  Cargo.toml  Makefile  README.md  plan-dev-v2.md  test-clipboard.sh  test-e2e-window.sh  test-healthcheck.sh  test-inputs-e2e.sh  test-jwt.sh  test-x509.sh
capture-test/: Cargo.toml
capture-test/src/: main.rs
config/: nidan-audit.toml  nidan-broker.toml  nidan-client.toml  nidan-server.toml
docker/: Dockerfile.audit  Dockerfile.broker  Dockerfile.server  docker-compose.yml  entrypoint-server.sh
docs/: CHEATSHEET-tests.md
encode-test/: Cargo.toml
encode-test/src/: main.rs
nidan-agent/: Cargo.toml
nidan-agent/src/: config.rs  input.rs  main.rs  remote_desktop.rs  vsock_link.rs
nidan-agent/src/capture/: pipewire.rs
nidan-audit/: Cargo.toml
nidan-audit/src/: config.rs  lib.rs  main.rs
nidan-audit/src/metrics/: mod.rs
nidan-audit/src/recording/: mod.rs
nidan-audit/src/storage/: mod.rs
nidan-audit/src/watermark/: mod.rs
nidan-broker/: Cargo.toml
nidan-broker/src/: config.rs  main.rs  session.rs
nidan-broker/src/api/: mod.rs
nidan-broker/src/auth/: jwt.rs  mod.rs  mtls.rs  oidc.rs  ratelimit.rs
nidan-broker/src/pool/: mod.rs
nidan-broker/src/proxmox/: mod.rs
nidan-broker/src/routing/: mod.rs
nidan-client/: Cargo.toml
nidan-client/src/: clipboard_local.rs  clipboard_x11.rs  config.rs  main.rs  session.rs
nidan-client/src/decoder/: ffmpeg.rs  mod.rs  openh264_dec.rs
nidan-client/src/input/: mod.rs
nidan-client/src/renderer/: mod.rs  sdl.rs
nidan-client/src/stream/: mod.rs
nidan-common/: Cargo.toml
nidan-common/src/: clipboard.rs  config.rs  crypto.rs  error.rs  lib.rs  logging.rs  session.rs
nidan-proto/: Cargo.toml  build.rs
nidan-proto/proto/: agent.proto  nidan.proto
nidan-proto/src/: lib.rs
nidan-proxy-encoder/: Cargo.toml  nidan-proxy-encoder.toml  nidan-proxy-encoder.toml.example
nidan-proxy-encoder/src/: config.rs  main.rs  remote_desktop.rs  session.rs  session_token.rs
nidan-proxy-encoder/src/capture/: mod.rs  vsock.rs  vsock_service.rs
nidan-proxy-encoder/src/encoder/: ffmpeg.rs  mod.rs  openh264_enc.rs
nidan-proxy-encoder/src/stream/: mod.rs
nidan-server/: Cargo.toml
nidan-server/src/: clipboard_x11.rs  config.rs  input.rs  main.rs  session.rs
nidan-server/src/capture/: mod.rs  pipewire.rs  x11.rs
nidan-server/src/encoder/: mod.rs  openh264_enc.rs  params.rs
nidan-server/src/stream/: mod.rs
scripts/: pki-init.sh
scripts_test/: test-broker.sh  test-clipboard-s2c.sh  test-nidan-e2e.sh  test-nidan.sh  validate-e2e-headless.sh
test-e2e/: client.toml  e2e_session.sh  server.toml
