[workspace]
members = [
    "nidan-proto",
    "nidan-common",
    "nidan-server",
    "nidan-client",
    "nidan-broker",
    "nidan-audit",
    "capture-test",
    "encode-test",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["NIDAN Project Team"]
license      = "GPL-3.0"
repository   = "https://github.com/Sentinel-Ops/Nidan"
rust-version = "1.75"

[workspace.dependencies]
# Proto
prost       = "0.12"
prost-types = "0.12"
tonic       = { version = "0.11", features = ["transport", "tls"] }
tonic-build = "0.11"

# Async
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# QUIC
quinn          = "0.11"
rustls         = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# Crypto
chacha20poly1305 = "0.10"
hkdf             = "0.12"
sha2             = "0.10"
hmac             = "0.12"
rand             = "0.8"
hex              = "0.4"
jsonwebtoken     = "9"
x509-parser      = "0.16"
x25519-dalek     = { version = "2", features = ["static_secrets"] }

# Sérialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = "1"

# Erreurs & logs
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config & CLI
config = "0.14"
toml   = "0.8"
clap   = { version = "4", features = ["derive"] }

# Divers
chrono  = { version = "0.4", features = ["serde"] }
uuid    = { version = "1", features = ["v4"] }
dashmap = "5"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[profile.dev]
opt-level = 1
