[package]
name        = "encode-test"
description = "Outil de test isolé pour l'encodage H.264 NIDAN"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "encode-test"
path = "src/main.rs"

[dependencies]
anyhow   = { workspace = true }
openh264 = "0.6"
png      = "0.17"
