[package]
name        = "nidan-audit"
description = "NIDAN audit — recording MKV, watermarking forensique, métriques"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "nidan-audit"
path = "src/main.rs"

[lib]
name = "nidan_audit"
path = "src/lib.rs"

[dependencies]
nidan-proto  = { path = "../nidan-proto" }
nidan-common = { path = "../nidan-common" }

# Async
tokio      = { workspace = true }
tokio-util = { workspace = true }
bytes      = { workspace = true }

# Sérialisation
serde       = { workspace = true }
serde_json  = { workspace = true }
prost       = { workspace = true }

# Logs & erreurs
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }

# Config & CLI
config = { workspace = true }
toml   = { workspace = true }
clap   = { workspace = true }

# Crypto (intégrité des enregistrements)
sha2  = { workspace = true }
hmac  = { workspace = true }
rand  = { workspace = true }

# Temps
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Métriques Prometheus
prometheus = { version = "0.13", features = ["process"] }

# HTTP pour exposition métriques
axum       = { version = "0.7" }
tower-http = { version = "0.5", features = ["trace"] }

# MKV / Matroska (recording vidéo)
# En Phase 4 : écriture MKV manuelle via EBML
# (pas de crate Matroska mature pour l'écriture en Rust)

[dev-dependencies]
tokio     = { workspace = true }
tempfile  = "3"
hex = { version = "0.4" }
