[package]
name        = "nidan-audit"
description = "NIDAN audit — recording MKV + watermark + Prometheus"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "nidan-audit"
path = "src/main.rs"

[lib]
name = "nidan_audit"
path = "src/lib.rs"

[dependencies]
nidan-proto  = { path = "../nidan-proto" }
nidan-common = { path = "../nidan-common" }
tokio        = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
toml         = { workspace = true }
clap         = { workspace = true }
sha2         = { workspace = true }
hmac         = { workspace = true }
rand         = { workspace = true }
hex          = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
prometheus   = { version = "0.13" }
axum         = "0.7"
tower-http   = { version = "0.5", features = ["trace"] }

[dev-dependencies]
tempfile = "3"
