[package]
name        = "nidan-broker"
description = "NIDAN broker — auth + pool VMs + routing QUIC"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "nidan-broker"
path = "src/main.rs"

[dependencies]
nidan-proto  = { path = "../nidan-proto" }
nidan-common = { path = "../nidan-common" }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
bytes        = { workspace = true }
quinn        = { workspace = true }
rustls       = { workspace = true }
rustls-pemfile = { workspace = true }
chacha20poly1305 = { workspace = true }
rand         = { workspace = true }
sha2         = { workspace = true }
hmac         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
toml         = { workspace = true }
clap         = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
dashmap      = { workspace = true }
axum            = "0.7"
tower-http      = { version = "0.5", features = ["trace"] }
jsonwebtoken    = "9"
x509-parser     = { workspace = true }
base64          = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rcgen = "0.13"
