[package]
name        = "nidan-client"
description = "NIDAN client — décodage vidéo + SDL2 + inputs"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "nidan-client"
path = "src/main.rs"

[dependencies]
nidan-proto  = { path = "../nidan-proto" }
nidan-common = { path = "../nidan-common" }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
bytes        = { workspace = true }
quinn        = { workspace = true }
rustls       = { workspace = true }
rustls-pemfile = { workspace = true }
chacha20poly1305 = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
toml         = { workspace = true }
clap         = { workspace = true }

openh264 = { version = "0.6", optional = true }

[features]
default        = ["stub"]
stub           = []
full           = ["sdl2-renderer", "openh264"]
sdl2-renderer  = []
ffmpeg         = []
openh264       = ["dep:openh264"]
