[package]
name        = "nidan-proto"
description = "Types du protocole NIDAN"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
bytes       = { workspace = true }
prost       = "0.13"

[build-dependencies]
prost-build = "0.13"
