[package]
name        = "nidan-proxy-encoder"
description = "NIDAN v2 — proxy-encoder sur l'hôte (encode le flux hors VM, expose QUIC E2E au client)"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "nidan-proxy-encoder"
path = "src/main.rs"

[dependencies]
nidan-proto  = { path = "../nidan-proto" }
nidan-common = { path = "../nidan-common" }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
bytes        = { workspace = true }
quinn        = { workspace = true }
rustls       = { workspace = true }
rustls-pemfile = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
toml         = { workspace = true }
clap         = { workspace = true }
chrono       = { workspace = true }

# Encodeur H.264 (openh264) — indispensable pour produire le flux vidéo.
openh264     = { version = "0.6", optional = true }

[features]
# Configuration minimale du proxy-encoder :
#   • stub    = source de frames factice (StubCapturer, pattern animé)
#   • openh264 = encodeur H.264 (via la crate openh264)
#
# À l'étape 3, on tourne par défaut avec "stub" + "openh264" pour valider
# la face client (QUIC/mTLS/E2E) sans dépendre de vsock.
# À l'étape 5, on ajoutera une feature "vsock-source" pour brancher l'agent
# via le canal validé à l'étape 2.
default   = ["stub", "openh264"]
stub      = []
openh264  = ["dep:openh264"]
