[package]
name        = "nidan-proxy-encoder"
description = "NIDAN v2 — proxy-encoder sur l'hôte (encode le flux hors VM, expose QUIC E2E au client)"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "nidan-proxy-encoder"
path = "src/main.rs"

[dependencies]
prost        = { version = "0.13", optional = true }
once_cell    = { version = "1", optional = false }
tokio-vsock  = { version = "0.7", optional = true }
nidan-proto  = { path = "../nidan-proto" }
nidan-common = { path = "../nidan-common" }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
bytes        = { workspace = true }
quinn        = { workspace = true }
rustls       = { workspace = true }
rustls-pemfile = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
toml         = { workspace = true }
clap         = { workspace = true }
chrono       = { workspace = true }

# Encodeur H.264 (openh264) — indispensable pour produire le flux vidéo.
openh264     = { version = "0.6", optional = true }

[features]
# Configuration minimale du proxy-encoder :
#   • stub    = source de frames factice (StubCapturer, pattern animé)
#   • openh264 = encodeur H.264 (via la crate openh264)
#
# À l'étape 3, on tourne par défaut avec "stub" + "openh264" pour valider
# la face client (QUIC/mTLS/E2E) sans dépendre de vsock.
# À l'étape 5, la feature "vsock-source" branche l'agent via le canal
# vsock validé à l'étape 2. On peut alors basculer par config :
#   [capture] backend = "stub"    → StubCapturer (pattern factice)
#   [capture] backend = "vsock"   → VsockCapturer (reçoit de l'agent)
default   = ["stub", "openh264", "vsock-source"]
stub      = []
openh264  = ["dep:openh264"]
vsock-source = ["dep:tokio-vsock", "dep:prost"]
