[package]
name        = "nidan-server"
description = "NIDAN serveur — capture X11 + encodage + QUIC"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "nidan-server"
path = "src/main.rs"

[dependencies]
nidan-proto  = { path = "../nidan-proto" }
nidan-common = { path = "../nidan-common" }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
bytes        = { workspace = true }
quinn        = { workspace = true }
rustls       = { workspace = true }
rustls-pemfile = { workspace = true }
chacha20poly1305 = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
toml         = { workspace = true }
clap         = { workspace = true }

# Capture X11 (pur Rust, derrière la feature x11-capture)
x11rb = { version = "0.13", optional = true, features = ["shm", "randr", "damage"] }

[features]
default     = ["stub"]
stub        = []
full        = ["x11-capture"]
x11-capture = ["dep:x11rb"]
ffmpeg      = []
