[package]
name        = "nidan-server"
description = "NIDAN serveur — capture X11 + encodage + QUIC"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "nidan-server"
path = "src/main.rs"

[dependencies]
nidan-proto  = { path = "../nidan-proto" }
nidan-common = { path = "../nidan-common" }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
bytes        = { workspace = true }
quinn        = { workspace = true }
rustls       = { workspace = true }
rustls-pemfile = { workspace = true }
chacha20poly1305 = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
toml         = { workspace = true }
clap         = { workspace = true }

# Capture X11 (pur Rust, derrière la feature x11-capture)
x11rb = { version = "0.13", optional = true, features = ["shm", "randr", "damage", "xtest"] }
openh264 = { version = "0.6", optional = true }

# Capture Wayland via portail ScreenCast + PipeWire (feature pipewire-capture)
pipewire = { version = "0.8", optional = true }
ashpd = { version = "0.9", optional = true, default-features = false, features = ["async-std"] }
libspa = { version = "0.8", optional = true }
pollster = { version = "0.3", optional = true }

[features]
default     = ["stub"]
stub        = []
full        = ["x11-capture", "openh264"]
full-wayland = ["pipewire-capture", "openh264"]
x11-capture = ["dep:x11rb"]
pipewire-capture = ["dep:pipewire", "dep:ashpd", "dep:libspa", "dep:pollster"]
ffmpeg      = []
openh264    = ["dep:openh264"]

[dev-dependencies]
chrono = { workspace = true }
